add signing app

--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
       "buildResources": "assets"
     },
     "win": {
-      "icon": "dist/petanque/assets/petanque.png"
+      "icon": "dist/petanque/assets/petanque.png",
+      "certificateFile": "\\\\NAS-Vitsika\\Vitsika\\Vitsik@\\Projects\\App_security\\vitsika.p12",
+      "certificatePassword": "fanantenana1985",
+      "publisherName":"${author}"
     }
   },
   "private": true,
