--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
+    "start-mobile": "ng serve --host 0.0.0.0",
     "start-electron": "electron-forge start",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
