--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "petanque",
-  "version": "1.0.2-SNAPSHOT",
+  "version": "1.0.2",
   "main": "main.js",
   "description": "Logiciel de concours de pétanque",
   "author": "Vitsik@",
